# puzzle-explorer-rs

./: Cargo.toml  README.md  build.sh  index.html  test-chrome-headless.sh  worker_template.js
.github/workflows/: gh-pages.yaml
puzzle-explorer-math/: Cargo.toml
puzzle-explorer-math/src/: canon.rs  circle.rs  geometry.rs  lib.rs  math.rs  orbit.rs  polygon.rs
puzzle-explorer-math/src/canon/: mod.rs
src/: app.rs  axis_impl.rs  color.rs  dreadnaut.rs  examples.rs  gap.rs  geometry.rs  gui.rs  input.rs  lib.rs  puzzle.rs  puzzle_io.rs  test.rs  three.rs  types.rs  worker.rs
src/examples/: Biaxe.yml  Err_no_version.yml  Err_version_500.yml  Megaminx.yml  Photonic Crystal.yml  Skyglobe Ultimate.yml  Trapentrix.yml  Undectrix.yml
src/gui/: axis_definitions.rs  controls.rs  gap_console.rs  measure_axis_angle.rs  menu.rs  mod.rs  orbit_analysis.rs  puzzle_params.rs
