[package]
name = "puzzle-explorer"
description = "A web application for puzzle design and geometry analysis"
license = "GPL-3.0-only"

version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[workspace]
members = [
    ".",
    "puzzle-explorer-math",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://cjgriscom.github.io/puzzle-explorer/"
repository = "https://github.com/cjgriscom/puzzle-explorer/"
authors = ["Chandler Griscom"]

[workspace.dependencies]
glam = "0.32"
blake3 = "1.8"
puzzle-explorer-math = { path = "puzzle-explorer-math" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
puzzle-explorer-math.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "Node", "HtmlElement", "Worker", "WorkerOptions", "MessageEvent", "Blob", "BlobPropertyBag", "Url", "File", "FileList", "FileReader", "HtmlInputElement", "HtmlAnchorElement", "Event", "EventTarget", "Performance", "ProgressEvent"] }
egui = { version = "0.34.1", default-features = false }
eframe = { version = "0.34.1", default-features = false, features = ["glow"] }
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10"
serde-wasm-bindgen = "0.6.5"
glam.workspace = true

# Desktop-only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "x11", "wayland"] }

# Browser-only
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[workspace.lints.rust]
unused_qualifications = "warn"

[lints]
workspace = true